Added model.js and product.js to the project

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="js/dojo/dojo.js"
                data-dojo-config="async: true"></script>
 
+<script type="text/javascript" src="js/legacy/model.js"></script>
+               <script type="text/javascript" src="js/legacy/product.js"></script>
+
 <script>require(["dojo/parser", "dijit/layout/BorderContainer", "dijit/layout/TabContainer", "dijit/layout/AccordionContainer", "dijit/layout/ContentPane", "dijit/layout/AccordionPane"
 	,"rijit/navigation/ProductsNavigation"]);</script>
 </head>
