--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 <script type="text/javascript" src="js/legacy/model.js"></script>
                <script type="text/javascript" src="js/legacy/product.js"></script>
 
-<script>require(["dojo/parser", "dijit/layout/BorderContainer", "dijit/layout/TabContainer", "dijit/layout/AccordionContainer", "dijit/layout/ContentPane", "dijit/layout/AccordionPane"
+<script>
+initDB();
+require(["dojo/parser", "dijit/layout/BorderContainer", "dijit/layout/TabContainer", "dijit/layout/AccordionContainer", "dijit/layout/ContentPane", "dijit/layout/AccordionPane"
 	,"rijit/navigation/ProductsNavigation"]);</script>
 </head>
-<body class="claro">
+<body class="soria rijit">
     <div data-dojo-type="dijit/layout/BorderContainer" style="width: 100%; height: 100%;">
     	    	    		<div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'top'">
     	    	    			Inventory
