--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ initDB();
 require(["dojo/parser", "dijit/layout/BorderContainer", "dijit/layout/TabContainer", "dijit/layout/AccordionContainer", "dijit/layout/ContentPane", "dijit/layout/AccordionPane"
 	,"rijit/navigation/ProductsNavigation"]);</script>
 </head>
-<body class="soria rijit">
+<body class="claro">
     <div data-dojo-type="dijit/layout/BorderContainer" style="width: 100%; height: 100%;">
     	    	    		<div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'top'">
     	    	    			Inventory
