--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ require(["dojo/parser", "dijit/layout/BorderContainer", "dijit/layout/TabContain
 </head>
 <body class="claro">
     <div data-dojo-type="dijit/layout/BorderContainer" style="width: 100%; height: 100%;">
-    	    	    		<div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'top'">
-    	    	    			Inventory
+    	    	    		<div id="debug" data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'top'">
+    	    	    			
 </div>
 
     	  <div data-dojo-type="dijit/layout/TabContainer" data-dojo-props="region:'center'">
