image resize and image save working awsomely fine

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script>dojoConfig = {parseOnLoad: true}</script>
     <script src="js/dojo/dojo.js"
                data-dojo-config="async: true"></script>
+<script type="text/javascript" src="js/legacy/canvas-toBlob.js"></script>
+<script type="text/javascript" src="js/legacy/FileSaver.js"></script>
 
 <script type="text/javascript" src="js/legacy/model.js"></script>
                <script type="text/javascript" src="js/legacy/product.js"></script>
