--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <script type="text/javascript" src="js/legacy/canvas-toBlob.js"></script>
 <script type="text/javascript" src="js/legacy/FileSaver.js"></script>
-
+<script type="text/javascript" src="js/bower_components/bongo.js/dist/bongo.min.js" ></script>
 <script type="text/javascript" src="js/legacy/model.js"></script>
                <script type="text/javascript" src="js/legacy/product.js"></script>
 
