modified dojo build settings for css combine

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@ var dojoConfig = (function(){
 
     </script>
 
-<!--         <script src="js/bower_components/dojo/dojo.js.uncompressed.js"
+        <script src="js/lib/dojo/dojo.js.uncompressed.js"
                data-dojo-config="async: true"></script>
 
-                <script type="text/javascript" src="js/bower_components/dojo/rijit.manage.js.uncompressed.js"></script> -->
+                <script type="text/javascript" src="js/lib/rijit/rijit.manage.js.uncompressed.js"></script>
 
-    <script src="js/dojo/dojo.js"
-               data-dojo-config="async: true"></script>
+<!--     <script src="js/dojo/dojo.js"
+               data-dojo-config="async: true"></script> -->
 
-               <link rel="stylesheet" href="js/dijit/themes/claro/claro.css" />
+               <link rel="stylesheet" href="js/lib/dijit/themes/claro/claro.css" />
                 <link rel="stylesheet" href="js/rijit/themes/style.css" />
 
 
